# courland-prospect

./: .gitignore  CLAUDE.md  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  util.rs
src-tauri/src/ai/: client.rs  commands.rs  mod.rs  prompt.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/migrations/: 0001_create_pitches.sql  0002_rename_description_to_skill.sql  0003_create_product.sql  0004_create_prospects.sql  0005_create_stages.sql  0006_add_stage_color.sql  0007_create_messages.sql  0008_rename_product_to_profile.sql  0009_create_chrome_profiles.sql  0010_replace_chrome_profiles.sql  0011_drop_capture_profile.sql  0012_add_message_direction.sql  0013_create_snippets.sql  0014_rename_responded_to_awaiting_reply.sql  0015_create_selectors.sql  0016_add_snippet_status.sql  0017_add_snippet_position_category.sql  0018_create_watched_profiles.sql  0019_create_commented_posts.sql  0020_create_comment_drafts.sql  0021_recreate_commented_posts.sql  mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/comments/: commands.rs  mod.rs  model.rs  repository.rs
src-tauri/src/features/messages/: mod.rs  repository.rs
src-tauri/src/features/pitches/: commands.rs  mod.rs  model.rs  repository.rs
src-tauri/src/features/profile/: commands.rs  mod.rs  model.rs  repository.rs
src-tauri/src/features/prospects/: commands.rs  mod.rs  model.rs  repository.rs
src-tauri/src/features/selectors/: mod.rs  (+1 more)
src-tauri/src/ingest/: chrome.rs  config.rs  gate.rs  mod.rs  security.rs  server.rs
(+111 files in other folders)
